--- a/index.html
+++ b/index.html
@@ -91,12 +91,20 @@ Because some websites require different settings, <strong>Twik</strong> also all
 </ul>
 
 <div style="text-align:center;margin-top:50px;margin-bottom:25px">
+  <a href="images/device-2014-08-22-130307.png" target="_blank">
     <img alt="Tutorial splash screen" src="images/device-2014-08-22-130307.png" width="250" style="margin-right:50px"/>
+  </a>
+  <a href="images/device-2014-08-22-130433.png" target="_blank">
     <img alt="Tutorial introduction" src="images/device-2014-08-22-130433.png" width="250"/>
+  </a>
 </div>
 <div style="text-align:center;margin-bottom:50px">
-  <img alt="Websites list" src="images/Screenshot_2014-08-24-20-54-25.png" width="250" style="margin-right:50px"/>
+  <a href="images/Screenshot_2014-08-24-20-54-25.png" target="_blank">
+    <img alt="Websites list" src="images/Screenshot_2014-08-24-20-54-25.png" width="250" style="margin-right:50px"/>
+  </a>
+  <a href="images/Screenshot_2014-08-24-20-58-05.png" target="_blank">
     <img alt="Web browser integration" src="images/Screenshot_2014-08-24-20-58-05.png" width="250"/>
+  </a>
 </div>
 
 <h3>Twik for Python</h3>
